--- a/arch/arm64/configs/lavender_defconfig
+++ b/arch/arm64/configs/lavender_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-SiLonY-Hallowatcher"
 CONFIG_LOCALVERSION_AUTO=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
