--- a/arch/arm64/configs/lavender_defconfig
+++ b/arch/arm64/configs/lavender_defconfig
@@ -36,6 +36,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_LZ4 is not set
 # CONFIG_KALLSYMS_ALL is not set
 # CONFIG_MEMBARRIER is not set
+CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_EMBEDDED=y
 CONFIG_LTO=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
