--- a/arch/arm64/configs/lavender_defconfig
+++ b/arch/arm64/configs/lavender_defconfig
@@ -474,7 +474,6 @@ CONFIG_ZSMALLOC=y
 CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
-CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_FRAME_VECTOR=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
@@ -581,17 +580,16 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set  
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set 
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y           
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -764,7 +762,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_CT=y
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
-# CONFIG_NETFILTER_XT_TARGET_HL is not set
+CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_HARDIDLETIMER=y
@@ -2894,6 +2892,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
@@ -3084,6 +3083,7 @@ CONFIG_SND_I2S_PRIMARY=y
 CONFIG_SND_SOC_MAX98937=y
 CONFIG_SND_SOC_SDM660_CDC=y
 # CONFIG_SND_SOC_TAS2557 is not set
+CONFIG_SOUND_CONTROL=y
 CONFIG_SND_SOC_MSM_SDW=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
